--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,10 @@ jobs:
     - name: Instalar Docker e Docker Compose
       run: |
         sudo apt-get update
-        sudo apt-get install -y docker-compose docker.io
+        sudo apt-get install -y docker.io
 
     - name: Subir ambiente com Docker Compose
-      run: docker-compose up -d
+      run: docker compose up -d
 
     - name: Verificar se o container Nginx esta rodando
       run: docker ps | grep nginx
