--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Checkout do codigo
       uses: actions/checkout@v3
 
-    - name: Instalar Docker e Docker Compose
+    - name: Instalar Docker
       run: |
         sudo apt-get update
         sudo apt-get install -y docker.io
@@ -25,7 +25,7 @@ jobs:
 
     - name: Verificar conteudo do HTML
       run: |
-        if grep -q "Ola, Marcio" site/index.html; then
+        if grep -q "Ola, Mundo" site/index.html; then
           echo "Conteudo encontrado no HTML"
         else
           echo "Conteudo esperado NAO encontrado"
