--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,10 @@ jobs:
     - name: Checkout do codigo
       uses: actions/checkout@v3
 
-    - name: Instalar Docker
+    - name: Instalar Docker via script oficial
       run: |
-        sudo apt-get update
-        sudo apt-get install -y docker.io
+        curl -fsSL https://get.docker.com -o get-docker.sh
+        sh get-docker.sh
 
     - name: Subir ambiente com Docker Compose
       run: docker compose up -d
