--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Verificar conteudo do HTML
       run: |
-        if grep -q "<h1>Ola, Mundo!</h1>" site/index.html; then
+        if grep -Eiq "<h1>.*Ola, Mundo.*</h1>" site/index.html; then
           echo "Conteudo encontrado no HTML"
         else
           echo "Conteudo esperado NAO encontrado"
